django-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: 730335380624.dkr.ecr.us-east-2.amazonaws.com/tedex-repo:latest
        ports:
        - containerPort: 8000
