django-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    app: django-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: django-app
